# projeto_pucpr_rust

./: Cargo.toml  LICENSE  README.md
back/: Cargo.toml  index.html  index.html.bkp  moedas.csv
back/src/: lib.rs
back/tests/: csv_tests.rs
