[package]
name = "back"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
serde = { version = "1.0.214", features = ["derive"] }
wasm-bindgen-test = "0.3"
serde_json = "1.0.132"
wasm-bindgen-futures = "0.4.45"
reqwasm = "0.5.0"
futures = "0.3.31"
